--- a/src/app/pages/menu/pix/newpix/newpix.component.html
+++ b/src/app/pages/menu/pix/newpix/newpix.component.html
@@ -19,11 +19,11 @@
           <h1></h1>
 
           <br />
-          <select class="choose" id="choose">
-            <option value="volvo">CPF</option>
-            <option value="saab">CNPJ</option>
-            <option value="mercedes">CEL</option>
-            <option value="audi">EMAIL</option>
+          <select class="choose" id="choose" name="choose"(click)="mudarChave()">
+            <option value="CPF">CPF</option>
+            <option value="CNPJ">CNPJ</option>
+            <option value="CEL">CEL</option>
+            <option value="EMAIL">EMAIL</option>
           </select>
 
           <input type="search" placeholder="Chave" class="input-pix" />
