--- a/src/app/pages/menu/pix/pix.component.html
+++ b/src/app/pages/menu/pix/pix.component.html
@@ -1,42 +1,59 @@
 <div class="carteira-container">
+  <div class="pix-cartao">
+    <ul>
+      <li>
+        <input
+          type="button"
+          value="Pagar"
+          class="btn-pix"
+          (click)="pagarPix()"
+        />
+      </li>
 
-    <div class="pix-cartao">
-        <ul>
-            <li><input type="button"value="Pagar"class="btn-pix"(click)="pagarPix()" />
+      <li>
+        <input
+          type="button"
+          value="Copia e Cola"
+          class="btn-pix2"
+          (click)="copiaColaPix()"
+        />
+      </li>
+    </ul>
+  </div>
 
-            </li>
-
-
-            <li><input type="button"value="Copia e Cola"class="btn-pix2"(click)="copiaColaPix()"></li>
-
-        </ul>
-
-
-   
+  <div class="extrato-buttons">
+    <div class="extrato-buttons-box">
+      <ul>
+        <li>
+          <input
+            type="button"
+            value="Copia e Cola"
+            class="btn-pix2"
+            (click)="copiaColaPix()"
+          />
+        </li>
+        <li>
+            <input
+            type="button"
+            value="Copia e Cola"
+            class="btn-pix2"
+            (click)="copiaColaPix()"
+          />
+        </li>
+      </ul>
     </div>
-    
-
-
-    <div class="extrato-buttons">
-        <div class="extrato-buttons-box">
-            <ul>
-                <li> <a href="http://localhost:4200/pages/extrato">Minhas Chaves</a></li>
-                <li>
-
-                    <a href="http://localhost:4200/pages/extrato"> Contatos</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-
-
-
+  </div>
 </div>
 
-
 <ng-template #pixpay>
+  <app-newpix
+    class="newpix"
+    (fecharPix)="fecharPix()"
+    [tipoPix]="tipoPix"
+  ></app-newpix>
 
-    <app-newpix class="newpix" (fecharPix)="fecharPix()" [tipoPix]="tipoPix"></app-newpix> <!-- quando tem (é um filho)   e quando tem [É o pai]-->
-    
+
+  <!-- quando tem (é um filho)   e quando tem [É o pai]-->
 </ng-template>
+
+
