--- a/src/app/pages/menu/pix/newpix/newpix.component.html
+++ b/src/app/pages/menu/pix/newpix/newpix.component.html
@@ -2,19 +2,21 @@
   <!--Nb é de Nebular, esse é uma componente importado do Nebular-->
   <div class="container">
     @if(tipoPix === "pagar"){
-    <app-pix-modal-pagar> </app-pix-modal-pagar>
+    {{ guardarRota() }}
+    <app-pix-modal-router></app-pix-modal-router>
+   
+    } @else if(tipoPix === "copiacola"){
+    {{ guardarRotaAlternativa() }}
+    <app-pix-modal-router></app-pix-modal-router>
 
-    } @else if(tipoPix === "confirm"){
-    <app-pix-confirm> </app-pix-confirm>
-
-    }@else if(tipoPix === "comprovante"){
-    <app-pix-confirm> </app-pix-confirm>
-
-    }@else if(tipoPix === "copiacola"){
-    <app-pix-modal-copia-cola> </app-pix-modal-copia-cola>
-
-    } @else{
-    <app-pix-modal-copia-cola> </app-pix-modal-copia-cola>
     }
+    @else{
+
+      <h1>else</h1>
+  
+      }
+  
+
+
   </div>
 </nb-card>
