html do componente de comprovante

--- a/src/app/pages/menu/pix/pix-modal-comprovante/pix-modal-comprovante.component.html
+++ b/src/app/pages/menu/pix/pix-modal-comprovante/pix-modal-comprovante.component.html
@@ -1,1 +1,8 @@
-<p>pix-modal-comprovante works!</p>
+<div class="modalPixBox">
+<p>Comprovante de Pix</p>
+<br>
+<p>De: David Lino</p>
+<p>Para: Humberto Souza</p>
+<br>
+<p>Valor 147 reais</p>
+</div>
