--- a/src/app/pages/menu/pix/pix-modal-pagar/pix-modal-pagar.component.scss
+++ b/src/app/pages/menu/pix/pix-modal-pagar/pix-modal-pagar.component.scss
@@ -1,141 +1,3 @@
 
-.container {
-    font-size: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 500px;
-    height: 390px;
-    flex-direction: column;
-  }
-  
-  .close {
-    color:#5a97d6;
-    font-size: 25px;
-    font-weight: bold;
-    cursor: pointer;
-   
-    margin-left: 450px;
-  }
-  
-  .close:hover {
-    color: #ff0000;
-  }
-  .close:focus {
-    color: black;
-  }
-  .pix-box {
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-    align-items: center;
-    background-color: #5a97d6;
-    width: 480px;
-    height: 350px;
-    border-radius: 25px;
-  }
-  .pix-box a {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    color: #ffffff;
-    text-decoration: none;
-    font-size: 40px;
-    padding-bottom: 25px;
-    cursor:zoom-in;
-    text-shadow: 2px 2px 5px rgb(94, 94, 94);
-  }
-  
-  .input-pix {
-    width: 222px;
-    color: #5a97d6;
-    background-color: #f7f7f7;
-    border-style: none;
-    border-radius: 5px;
-    height: 38px;
-    padding-left: 15px;
-    margin-bottom: 10px;
-    text-shadow: 2px 2px 5px rgb(169, 192, 255);
-  
-  }
-  .input-pix::placeholder {
-    color: #5a97d6;
-  }
-  .input-pix2 {
-  
-    color: #5a97d6;
-    background-color: #f7f7f7;
-    border-style: none;
-    border-radius: 50px;
-    width: 90px;
-    height: 38px;
-    margin-top: 20px;
-    padding-left: 10px;
-  text-align: center;
-    text-shadow: 2px 2px 5px rgb(169, 192, 255);
-  
-  }
-  .input-pix2::placeholder {
-    color: #5a97d6;
-  }
-  .esconder {
-    display: none;
-  }
-  
-  .bg-img img {
-    padding-top: 15px;
-    width: 200px;
-    height: 200px;
-  }
-  .buttons {
-    display: inline-flex;
-    margin-top: 30px;
-   margin-bottom: 15px;
-  }
-  .btn-pix {
-    background-color: #fafafa;
-    color: #5a97d6;
-    border-radius: 40px;
-    cursor: cell;
-    height: 35px;
-    border-color: rgba(0, 0, 51, 0);
-    width: 70px;
-    margin: 0 60px 0 60px;
-      margin-top: 10px ;
-  
-  }
-  
-  .btn-pix:hover {
-    background-color: #72d7ff;
-    color: #ffffff;
-  }
-  
-  .btn-pix2 {
-    background-color: #fafafa;
-    color: #5a97d6;
-    border-radius: 50px;
-    cursor: cell;
-    height: 35px;
-    width: 112px;
-    margin-top: 10px ;
-    border-color: rgba(0, 0, 51, 0);
-  }
-  
-  .btn-pix2:hover {
-    background-color: #72d7ff;
-    color: #ffffff;
-  }
-  .choose {
-    background-color:  #fafafa;
-    display:120px;
-    color: #5a97d6;
-    background-color: #f7f7f7;
-    border-style: none;
-    border-radius: 5px;
-    height: 38px;
-    text-shadow: 2px 2px 5px rgb(169, 192, 255);
-  
-    color:#5a97d6;
-  }
-  
+@use'./../../../../../estilos/modal-styles.scss';
+
