html do modal de conferir os dados pix

--- a/src/app/pages/menu/pix/pix-modal-conferir-dados/pix-modal-conferir-dados.component.html
+++ b/src/app/pages/menu/pix/pix-modal-conferir-dados/pix-modal-conferir-dados.component.html
@@ -1,1 +1,11 @@
-<p>pix-modal-conferir-dados works!</p>
+
+<div class="modalPixBox">
+
+  <p> Confirme Os Dados PIX </p>
+  <p>Nome:{{ "Fulano De tal Ciclano" }}</p>
+  <p>Valor:{{ "fsfsfs" }}</p>
+  <p>Instituição:{{ "Banco Do Brasil ag 123-4/4" }}</p>
+  <p>Data Prevista do Pagamento:{{ "22/03/2024" }}</p>
+
+
+</div>
