nova funcao de fechar os modais

--- a/src/app/pages/menu/pix/pix-modal-router/pix-modal-router.component.html
+++ b/src/app/pages/menu/pix/pix-modal-router/pix-modal-router.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="modalPixbox">
-    <span type="button" (click)="fecharPix.emit(true)" class="modalClose" id="Btn">&times;</span>
+    <span type="button" (click)="closePix()" class="modalClose" id="Btn">&times;</span>
     <!-- (click)="fecharPix.emit(true)" -->
     <br />
   
