ao mudar entra nessa funcao

--- a/src/app/pages/menu/pix/pix-modal-pagar/pix-modal-pagar.component.html
+++ b/src/app/pages/menu/pix/pix-modal-pagar/pix-modal-pagar.component.html
@@ -20,6 +20,7 @@
       placeholder="Valor"
       class="modalPixInput2"
       formControlName="amount"
+      (change)="waitChange()"
     />
   </div>
   <!-- <button (click)="waitChange()">Buscar Chave</button> -->
