desabilita o botao se o campo nao for preenchido

--- a/src/app/pages/login/components/signin/signin.component.html
+++ b/src/app/pages/login/components/signin/signin.component.html
@@ -17,13 +17,8 @@
   <div>
 
 
-    <a
-    (click)="enviarLogin()"
-    class="btn"
+    <button (click)="enviarLogin()"class="btn" [disabled]="loginForm.invalid">Login </button>
     
-    >Login
-
-    </a>
   </div>
 
   
