--- a/src/app/pages/login/components/signup/signup.component.scss
+++ b/src/app/pages/login/components/signup/signup.component.scss
@@ -1,16 +1,22 @@
 
 .register-box h1{
   text-align: center;
-  margin-bottom:6px;
+  // margin-bottom:6px;
   color: #ffffff;
   text-shadow: rgb(121, 121, 121) 0.05em 0.05em 0.2em;
 
   
   }
   .register-box{
-   
+  //  margin-left: 35px;
+
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
   border-radius: 12px;
-     margin-bottom: 6px;
+    //  margin-bottom: 6px;
     }
     
   .register-box input{
@@ -32,7 +38,7 @@
   .btn {
   display: block;
       border-radius: 4px;
-      margin: 8px 40px 10px 40px;
+      margin: 10px 20px 0px 90px;
       font-size: 13px;
       font-weight: 600;
       color: #999999;
