--- a/src/app/pages/menu/pix/pix-modal-conferir-dados/pix-modal-conferir-dados.component.html
+++ b/src/app/pages/menu/pix/pix-modal-conferir-dados/pix-modal-conferir-dados.component.html
@@ -1,11 +1,10 @@
 
 <div class="modalPixBox">
-
   <p> Confirme Os Dados PIX </p>
-  <p>Nome:{{ "Fulano De tal Ciclano" }}</p>
-  <p>Valor:{{ "fsfsfs" }}</p>
-  <p>Instituição:{{ "Banco Do Brasil ag 123-4/4" }}</p>
-  <p>Data Prevista do Pagamento:{{ "22/03/2024" }}</p>
+  <p>Nome:{{ atualizarDados['nome'] }}</p>
+  <p>Valor: {{ atualizarDados['valor'] }}</p>
+  <p>Instituição:{{ "Banco Bench Do Brasil ag 123-4/4" }}</p>
+  <p>Data Prevista do Pagamento: {{ atualizarDados['data'] }}</p>
 
 
 </div>
