feature texto informativo do about us

--- a/src/app/pages/menu/about/about.component.html
+++ b/src/app/pages/menu/about/about.component.html
@@ -1,1 +1,35 @@
-<p>about works!</p>
+<div class="container-about">
+<h1>Banco Bench Do Brasil</h1>
+<p>
+ O Banco Bench é uma instituição financeira comprometida em redefinir os padrões de excelência no setor bancário. Com uma trajetória sólida e voltada para a inovação, somos reconhecidos por nossa abordagem centrada no cliente e pelo compromisso com a transparência e ética.
+<br>
+<br>
+
+Valores e Paradigmas:
+<br>
+<br>
+
+Nosso compromisso com a integridade, responsabilidade e sustentabilidade guia cada decisão que tomamos. No Banco Bench, acreditamos na criação de valor compartilhado, buscando equilíbrio entre o crescimento econômico e a responsabilidade social. Nossos valores fundamentais incluem confiança, inovação, colaboração e compromisso com a comunidade.
+<br>
+<br>
+
+Visão de Futuro:
+<br>
+<br>
+
+Enxergamos o futuro como uma oportunidade para liderar a transformação digital no setor financeiro, proporcionando uma experiência bancária mais eficiente, acessível e personalizada. Buscamos ser pioneiros na adoção de tecnologias emergentes, promovendo a inclusão financeira e contribuindo para o desenvolvimento econômico sustentável.
+<br>
+<br>
+
+Investimentos para Você e Seu Negócio:
+<br>
+<br>
+
+No Banco Bench, entendemos que cada cliente é único. Oferecemos uma ampla gama de soluções de investimento personalizadas, adaptadas às necessidades específicas de indivíduos e empresas. Seja para o crescimento de seu patrimônio pessoal ou para impulsionar o sucesso de seu negócio, estamos comprometidos em fornecer orientação especializada e produtos financeiros inovadores.
+<br>
+<br>
+
+Em resumo, no Banco Bench, estamos moldando o futuro financeiro com base em valores sólidos, uma visão inovadora e investimentos personalizados, fortalecendo parcerias duradouras e contribuindo para o sucesso de nossos clientes e comunidades.
+</p>
+
+</div>
