--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md">
                 <div class="social-area">
-                    <img class="img-fluid" src="https://cucafresca.com.br/public/site/img/marca_cuca.png" />
+                    <img class="img-fluid" src="./../../assets/images/cartao.png" />
                 </div>
             </div>
             <div class="col-md-9 col-sm-9 col-12 ml-auto mr-auto">
@@ -18,19 +18,10 @@
                                 </li>
                                 <li>
                                     <a href="https://cucafresca.com.br#solucoes">
-                                        Soluções
+                                        Investimentos
                                       </a>
                                 </li>
-                                <li>
-                                    <a href="https://cucafresca.com.br#empresa">
-                                        Quem Somos
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://cucafresca.com.br/contato">
-                                        Contato
-                                    </a>
-                                </li>
+                              
                         
                             </ul>
 
@@ -41,19 +32,15 @@
                             <ul class="uppercase-links stacked-links">
                                 <li>
                                     <a href="https://cucafresca.com.br/produtos/cuca">
-                                        Cuca Plus
+                                       Bench Empresas 
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://cucafresca.com.br/produtos/dpcuca">
-                                        Dpcuca
+                                       Bench Pessoal 
                                     </a>
                                 </li>
-                                <li>
-                                    <a href="https://cucafresca.com.br/produtos/esocial">
-                                        eSocial
-                                    </a>
-                                </li>
+                              
                             </ul>
                         </div>
                     </div>
@@ -62,12 +49,12 @@
                             <ul class="uppercase-links stacked-links">
                                 <li>
                                     <a href="https://cucafresca.vagas.solides.com.br/">
-                                        Trabalhe Conosco
+                                        Sac
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://cucafresca.com.br/solicitar">
-                                        Solicitar Orçamento
+                                       Contato
                                     </a>
                                 </li>
                             </ul>
@@ -77,7 +64,7 @@
                 <hr>
                 <div class="copyright">
                     <div class="text-center">
-                        Cuca Fresca Fornecedora de Sistemas ©2024
+                        Banco Bench Do Brasil  ©2024
                        
                     </div>
                     <div class="text-center">
