--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -2,8 +2,8 @@
   
 
    height: 60vh;
-
+   background-size: 30%;
    background-repeat: no-repeat;
    background-position: top, center;
-   background-image: url('../../../assets/images/5cad15cccc7f578b1326dfee286b6798-a-cone-de-ma-o-bitcoin.png');
+   background-image: url('../../../assets/images/money-coin-svgrepo-com.png');
    }
