--- a/src/estilos/modal-styles.scss
+++ b/src/estilos/modal-styles.scss
@@ -1,8 +1,15 @@
+$black: #131313;
+$black-light: #353535;
+$orange-logo: #f68511;
+$blue-logo: #5a97d6;
+$white: #fafafa;
+$blue-light: #68bdf1;
+$orange-dark:#ff7300;
 .container {
   display: block;
 
   align-items: center;
-  background-color: #63a2e2;
+  background-color: $orange-logo;
   border-radius: 25px;
   padding-top: 12px;
   height: 400px;
@@ -13,7 +20,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: #5a97d6;
+  background-color:$orange-dark;
   border-radius: 25px;
   height: 280px;
   width: 530px;
@@ -38,7 +45,7 @@
 }
 .modalPixInput {
   width: 222px;
-  color: #5a97d6;
+  color: $blue-light;
   background-color: #f7f7f7;
   border-style: none;
   border-radius: 5px;
@@ -48,10 +55,10 @@
   text-shadow: 2px 2px 5px rgb(169, 192, 255);
 }
 .modalPixInput ::placeholder {
-  color: #5a97d6;
+  color:$blue-light;
 }
 .modalPixInput2 {
-  color: #5a97d6;
+  color:$blue-light;
   background-color: #f7f7f7;
   border-style: none;
   border-radius: 50px;
@@ -69,13 +76,13 @@
 .modalPixSelect {
   background-color: #fafafa;
   display: 120px;
-  color: #5a97d6;
+  color:$blue-light;
   background-color: #f7f7f7;
   border-style: none;
   border-radius: 5px;
   height: 38px;
   text-shadow: 2px 2px 5px rgb(169, 192, 255);
-  color: #5a97d6;
+  color: $blue-light;
 }
 .modalClose {
   color: #ffffff;
@@ -96,7 +103,7 @@
 }
 .modalButtons1 {
   background-color: #fafafa;
-  color: #5a97d6;
+  color: $blue-light;
   border-radius: 40px;
   cursor: cell;
   height: 35px;
@@ -113,7 +120,7 @@
 
 .modalButtons2 {
   background-color: #fafafa;
-  color: #5a97d6;
+  color:$orange-dark;
   border-radius: 50px;
   cursor: cell;
   height: 35px;
