--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -67,6 +67,8 @@
         </li>
       </ul>
     </div>
+    <img src="./../../assets/images/bb-logo.png" routerLink="/pages/dashboard" alt="bb-logo">
+
   </nb-layout-header>
 
   <nb-sidebar left tag="left">
