--- a/src/estilos/login-styles.scss
+++ b/src/estilos/login-styles.scss
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900");
-@import url("https://fonts.googleapis.com/css2?family=Allerta&display=swap");
+// @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900");
+// @import url("https://fonts.googleapis.com/css2?family=Allerta&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 .bgimage {
