campo do comprovante, agencia e cpf

--- a/src/app/pages/menu/pix/pix-modal-comprovante/pix-modal-comprovante.component.html
+++ b/src/app/pages/menu/pix/pix-modal-comprovante/pix-modal-comprovante.component.html
@@ -9,7 +9,8 @@
       <br />
       <a>Para: {{ nome }}</a>
       <a>Chave: {{ chave}}</a>
-      <a>Agencia: {{ nome }}</a>
+      <a>Agencia: {{ agencia }}</a>
+      <a>CPF: {{ cpf }}</a>
 
       <br />
       <a>Valor {{ valor }} reais</a>
