--- a/src/app/pages/menu/pix/pix-modal-pagar/pix-modal-pagar.component.html
+++ b/src/app/pages/menu/pix/pix-modal-pagar/pix-modal-pagar.component.html
@@ -7,7 +7,7 @@
 
     <select class="modalPixSelect" id="choose" (change)="waitChange()" formControlName="choose" required>
       <option value="1">CPF</option>
-      <option value="2">CNPJ</option>
+      <!-- <option value="2">CNPJ</option> -->
       <option value="3">CEL</option>
       <option value="4">EMAIL</option>
     </select>
