--- a/src/estilos/modal-styles.scss
+++ b/src/estilos/modal-styles.scss
@@ -147,12 +147,24 @@ $orange-dark: #ff7300;
   text-shadow: 2px 2px 5px rgb(94, 94, 94);
   text-decoration: none;
 }
-.a a{
+.a a {
   color: $white;
   font-size: 15px;
   cursor: zoom-in;
   text-shadow: 2px 2px 5px rgb(94, 94, 94);
   text-decoration: none;
+  text-align: center;
+}
+.modalPixBoxC button {
+  cursor: pointer;
+  text-shadow: 2px 2px 5px rgb(94, 94, 94);
+  border-style: none;
+  background-color: #35353500;
+  color: $blue-light;
+}
+.modalPixBoxC button:hover {
+  cursor: pointer;
+  color: $blue-logo;
 }
 .inner-box a {
   display: flex;
@@ -181,10 +193,8 @@ $orange-dark: #ff7300;
   flex-direction: column;
   align-items: baseline;
 
-
   display: inline-flex;
   flex-wrap: wrap;
-
 
   background-color: $white;
   border-radius: 20px;
@@ -204,7 +214,7 @@ $orange-dark: #ff7300;
   height: 280px;
   width: 530px;
 }
-.box-logo{
+.box-logo {
   background-color: $white;
   border-radius: 15px;
   height: 100px;
@@ -212,4 +222,10 @@ $orange-dark: #ff7300;
   align-items: center;
   justify-content: center;
   display: flex;
+}
+#content {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
