--- a/src/estilos/signin-styles.scss
+++ b/src/estilos/signin-styles.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Allerta&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Allerta&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 .login-box h1 {
@@ -36,7 +36,7 @@
 }
 .login-box input::placeholder {
   color: #ffffff;
-  font-family: "Allerta", sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 14px;
@@ -52,7 +52,7 @@
   margin-top: 70px;
   height: 45px;
   width: 175px;
-  font-family: "Allerta", sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 20px;
