funciona Deploy por favor ksks

--- a/src/app/pages/login/components/signup/signup.component.html
+++ b/src/app/pages/login/components/signup/signup.component.html
@@ -25,5 +25,9 @@
     Register
   </button>
 </div>
-<a class="b1" (click)="check()">Ja possui uma conta ?</a>
+  <app-checkbox>
+    
+    </app-checkbox>
+
+<!-- <a class="b1" (click)="check()">Ja possui uma conta ?</a> -->
 <!-- <app-checkbox></app-checkbox> -->
