--- a/src/app/pages/login/components/checkbox/checkbox.component.html
+++ b/src/app/pages/login/components/checkbox/checkbox.component.html
@@ -1,3 +1,3 @@
   <div class="container-checkbox">
-    <a (click)="check()" class="b1"> Logar  ou  Registrar Entre agora !</a>
+    <a (click)="check()" class="b1"> Não Possui Uma conta ainda ?</a>
   </div>
