--- a/src/app/pages/login/components/signup/signup.component.html
+++ b/src/app/pages/login/components/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="register-box" [formGroup]="RegisterForm">
-  
+
   <h1>Registrar</h1>
 
   <br />
@@ -11,23 +11,29 @@
 
   <input type="text" placeholder="Phone Number" formControlName="telefone" />
   <br />
-
+  <div *ngIf="RegisterForm.get('telefone')!.hasError('telefone')">
+    Não é um formato de email válido. 
+  </div>
   <input type="text" placeholder="Email" formControlName="email" />
   <br />
-
+  <!-- <div *ngIf="RegisterForm.get('email')!.hasError('email')">
+    Não é um formato de email válido. 
+  </div> -->
   <input type="password" placeholder="Password" formControlName="senha" />
 </div>
-
+<!-- <div *ngIf="RegisterForm.get('senha')!.hasError('maxlength')"> 
+A sua senha deve conter até 10 caracteres !
+</div> -->
 <div style="justify-content: center; display: flex;">
 
   <button [disabled]="RegisterForm.invalid" (click)="enviarRegistro()" class="btn">
    
-    Register
+    Register 
   </button>
 </div>
-  <app-checkbox>
-    
-    </app-checkbox>
 
-<!-- <a class="b1" (click)="check()">Ja possui uma conta ?</a> -->
-<!-- <app-checkbox></app-checkbox> -->
+
+ @if(RegisterForm.invalid ){
+ {{registerError()}}
+ {{registerErr}}
+ }
