--- a/src/estilos/login-styles.scss
+++ b/src/estilos/login-styles.scss
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: center;
 
-  cursor: url("/src/assets/images/cursor-up-left-svgrepo-com.png"), auto;
+  cursor: auto;
 
 }
 .logo {
@@ -66,6 +66,10 @@
   padding-top: 30px;
   align-items: center;
   justify-content: center;
+}
+.container-login{
+  text-align: center;
+
 }
 // .checkbox {
 //   --size: 70px;
